fixed unnecessary whitespace at breakpoint 3

--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,14 @@ nav img {
 	padding-top: 9em;
 }
 
+/* Padding is greatly reduced at breakpoint 3 */
+@media only screen and (max-width: 770px) {
+	.featuredProducts h1 {
+		padding-top: 3em;
+	}
+}
+
+
 .productLinks .container {
 	display: flex;
 	justify-content: space-around;
